plugins {
    id 'application'
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'junit:junit:4.13.1'

    testImplementation("org.junit.jupiter:junit-jupiter:5.8.1")
//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}

application {
  getMainClass().set('agh.ics.oop.World')
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(16))
    }
}